@@ -1,3 +1,8 @@
+2009-12-02  Ianna Osborne  <ianna.osborne@cern.ch>
+
+	* ispy_33X_COW_online_server_cfg.py: Online configuration to run
+	of COW.
+	
 2009-12-02 Tom McCauley <thomas.mccauley@cern.ch>
 
 	* ISpyTriggerEvent.cc: add fix to handling of process name
